Boxing all text detected

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,3 +4,5 @@ services:
     tesseract:
         build: ./app
         image: tesseract-app:1.0
+        volumes:
+            - ./output:/usr/src/tesseract-app/app/output
